@@ -12,8 +12,8 @@ import java.util.zip.GZIPInputStream;
 
 import com.xiaoleilu.hutool.exceptions.HttpException;
 import com.xiaoleilu.hutool.io.FastByteArrayOutputStream;
+import com.xiaoleilu.hutool.io.IoUtil;
 import com.xiaoleilu.hutool.lang.Conver;
-import com.xiaoleilu.hutool.util.IoUtil;
 import com.xiaoleilu.hutool.util.StrUtil;
 
 /**
